--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,6 +12,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pb
 set -g base-index 1
 set -g pane-base-index 1
 set -g mouse on
+set -g default-terminal "xterm-256color"
 set -g renumber-windows on
 set -g focus-events on
 
