added keymaps and chezmoi ignore for linux

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,8 +1,10 @@
 LICENSE
+**/.luarc.json
+
 {{- if ne .chezmoi.os "linux" }}
 .bashrc
 .profile
 install.sh
 robotics_install.sh
+Fonts/
 {{ end }}
-.luarc.json
